[gd_scene load_steps=10 format=3 uid="uid://ifkoys3kmbtg"]

[ext_resource type="PackedScene" uid="uid://dfw5cjcltjuy2" path="res://easy_1_map.tscn" id="2_4d7c0"]
[ext_resource type="PackedScene" uid="uid://m7wfoofo1pe0" path="res://player.tscn" id="2_rh00f"]
[ext_resource type="PackedScene" uid="uid://i7778i5xq2l8" path="res://coin.tscn" id="3_apnct"]
[ext_resource type="Script" path="res://level_1_map.gd" id="3_w4aqv"]
[ext_resource type="PackedScene" uid="uid://24m2mi44bx2b" path="res://Easy_d1.tscn" id="4_u3qeq"]
[ext_resource type="PackedScene" uid="uid://baw2coy5u4qld" path="res://ScorePoint.tscn" id="6_fe0ih"]
[ext_resource type="PackedScene" uid="uid://b1kx17ssy55vl" path="res://pause_menu.tscn" id="8_7kinx"]
[ext_resource type="PackedScene" uid="uid://nk3ewg3vkcms" path="res://monster_d_1.tscn" id="9_5gph5"]
[ext_resource type="PackedScene" uid="uid://bjm2x1tvsdy4a" path="res://TextInput_Move.tscn" id="9_ct8vs"]

[node name="TestGamMain" type="Node2D"]

[node name="Easy1" parent="." instance=ExtResource("2_4d7c0")]
script = ExtResource("3_w4aqv")

[node name="pauseMenu" parent="Easy1" instance=ExtResource("8_7kinx")]
visible = false
z_index = 20

[node name="Fasttyping" parent="Easy1/pauseMenu" instance=ExtResource("4_u3qeq")]
z_index = 20
position = Vector2(-7, 0)

[node name="Player" parent="Easy1/pauseMenu/Fasttyping/mainBG" index="1"]
script = null

[node name="MonsterD1" parent="Easy1" instance=ExtResource("9_5gph5")]
position = Vector2(650, 328)

[node name="TextInput_move" parent="." instance=ExtResource("9_ct8vs")]
offset_left = 96.0
offset_top = 568.0
offset_right = 1153.0
offset_bottom = 662.0
placeholder_text = "UDLR"

[node name="HUD" parent="." instance=ExtResource("6_fe0ih")]

[node name="Coin2" parent="." instance=ExtResource("3_apnct")]
position = Vector2(651, 267)

[node name="Coin3" parent="." instance=ExtResource("3_apnct")]
position = Vector2(457, 267)

[node name="Player" parent="." instance=ExtResource("2_rh00f")]
z_index = 10
position = Vector2(256, 448)
scale = Vector2(0.516135, 0.5)

[node name="Sprite2D" parent="Player" index="0"]
position = Vector2(9.68741, 56)

[node name="CollisionShape2D" parent="Player" index="1"]
visible = false

[node name="Timer" parent="Player" index="4"]
wait_time = 0.518

[node name="Node" type="Node" parent="."]

[connection signal="monster1Pause" from="Easy1" to="Easy1/pauseMenu/Fasttyping" method="_on_easy_1_monster_1_pause"]
[connection signal="pressed" from="Easy1/pauseMenu/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Easy1/pauseMenu/Continue" to="Easy1" method="_on_continue_pressed"]
[connection signal="exitMonsterD1" from="Easy1/pauseMenu/Fasttyping" to="Easy1" method="_on_fasttyping_exit_monster_d_1"]
[connection signal="body_entered" from="Easy1/MonsterD1" to="Easy1" method="_on_monster_d_1_body_entered"]
[connection signal="text_submitted" from="TextInput_move" to="." method="_on_text_input_move_text_submitted"]
[connection signal="text_submitted" from="TextInput_move" to="Easy1" method="_on_text_input_move_text_submitted"]

[editable path="Easy1"]
[editable path="Easy1/pauseMenu"]
[editable path="Easy1/pauseMenu/Fasttyping"]
[editable path="Coin2"]
[editable path="Player"]
